--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- <img class="wallpaper" id="wallpaper" src="./assets/images/wallpaper/FinalPatternDark.svg" alt=""> -->
     <main>
-        <div class="page home" id="#Home">
+        <div class="page home" id="Home">
             <div class="mithibe-image">
                 <img src="./assets/images/People/mithibe.jpg" alt="mithibe">
             </div>
@@ -21,9 +21,25 @@
                 <button>Explore</button>
             </div>
         </div>
-        <div class="page" id="#AboutMe"><h1>About Me</h1></div>
-        <div class="page" id="#Portfolio"><h1>Portfolio</h1></div>
-        <div class="page" id="#ContactMe"><h1>Contact me</h1></div>
+        <div class="page about-me" id="AboutMe">
+            <h1 class="about-me-title">About Me</h1>
+            <p class="about-me-bio">
+                Hello!  My name is Mithibe, I am a passionate UI/UX Designer, Web Developer, Mobile App Developer and IT technician based in Kenya with an eye for detail and a strong foundation in technology, I strive to innovate experiences that are functional and visually captivating as well.
+
+                I majorly work with the following technologies:
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JAVASCRIPT</li>
+                        <li>C#</li>
+                        <li>MAUI</li>
+                        <li>VUE.JS</li>
+                        <li>PYTHON</li>
+                    </ul>
+            </p>
+        </div>
+        <div class="page" id="Portfolio"><h1>Portfolio</h1></div>
+        <div class="page" id="ContactMe"><h1>Contact me</h1></div>
     </main>
     <nav>
         <ul>
