fixed the projects page

--- a/index.html
+++ b/index.html
@@ -158,16 +158,16 @@
             <h1 class="contactme-title">Contact me</h1>
             <div class="main-contacts">
                 <ul>
-                    <a href="">
+                    <a href="tel:+254768737770">
                         <li><box-icon name="phone" type="solid" color="#fdf7f7" size="50px"></box-icon> </li>
                     </a>
-                    <a href="">
+                    <a href="https://wa.me/254768737770">
                         <li><box-icon name='whatsapp-square' type='logo' color='#fdf7f7' size="50px"></box-icon></li>
                     </a>
-                    <a href="">
+                    <a href="sms:+254768737770">
                         <li><box-icon name='chat' type='solid' color='#fdf7f7' size="50px"></box-icon></li>
                     </a>
-                    <a href="">
+                    <a href="mailto:kenmithibe@outlook.com">
                         <li><box-icon name='envelope' type='solid' color='#fdf7f7' size="50px"></box-icon></li>
                     </a>
                 </ul>
