fixed the matrix animation

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="details-frame">
                 <h1>Mithibe Irungu</h1>
-                <h3>UI/UX Designer</h3>
+                <h3><span class="changing-text" id="changing-text">UI/UX Designer</span></h3>
 
                 <button>Explore</button>
             </div>
